Ensure that PageSignalReceiver creates at most one mojo channel.

This changes the guard of lazy mojo channel construction from the one
that is based on observer list emptiness to a separate boolean flag.

The existing guard is fragile because the observer list can become
empty after channel construction. See details in the bug and the test.

Bug: 855114
Tbr: fdoray@chromium.org
Change-Id: I5585c3ac2aa6425d9401bebd3a6c132199f2e011
Reviewed-on: https://chromium-review.googlesource.com/1110365
Reviewed-by: Ulan Degenbaev <ulan@chromium.org>
Commit-Queue: Ulan Degenbaev <ulan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569565}
Former-commit-id: 0f9a9c53bc100d3b85b688753777ca7a31462311